--- a/app/src/main/resources/static/register/doctors-profile.html
+++ b/app/src/main/resources/static/register/doctors-profile.html
@@ -306,7 +306,7 @@
               <!-- Bordered Tabs -->
               <ul class="nav nav-tabs nav-tabs-bordered">
 
-                <li class="nav-item" style="">
+                <li class="nav-item">
                   <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">개인 정보
                     조회</button>
                 </li>
@@ -365,12 +365,17 @@
                     <div class="col-lg-9 col-md-8 doctors-career"></div>
                   </div>
 
+                  <div class="row">
+                    <div class="col-lg-3 col-md-4 label">소속 병원</div>
+                    <div class="col-lg-9 col-md-8 doctors-hospital"></div>
+                  </div>
+
                 </div>
 
                 <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
 
                   <!-- Profile Edit Form -->
-                  <form>
+                  <div>
                     <div class="row mb-3">
                       <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">사진 수정</label>
                       <input type="file" class="form-control change-img" accept="image/*" id="inputGroupFile01"
@@ -401,13 +406,81 @@
                         인증</button>
                     </div>
 
+
                     <div class="row mb-3">
-                      <label for="addr" class="col-md-4 col-lg-3 col-form-label">주소</label>
-                      <div class="col-md-4 col-lg-6">
-                        <input type="text" class="form-control change-addr" id="addr" readonly>
+                      <label
+                        class="col-lg-3 col-form-label"
+                        >주소</label
+                      >
+                      <div class="col-lg-3">
+                        <input
+                          type="text"
+                          class="form-control change-addr"
+                          id="postcode"
+                          placeholder="우편번호"
+                          name="addr"
+                          required
+                          readonly
+                        />
                       </div>
-                      <button type="button" onclick="addr()" class="btn btn-secondary col-md-2" style="height: 90%;">주소
-                        정보 변경</button>
+                      <div class="col-lg-3">
+                        <input
+                          type="button"
+                          onclick="execDaumPostcode()"
+                          value="우편번호 찾기"
+                          class="btn btn-secondary"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="row mb-3">
+                      <label
+                        class="col-lg-3 col-form-label"
+                      ></label>
+                      <div class="col-lg-4">
+                        <input
+                          type="text"
+                          id="roadAddress"
+                          placeholder="도로명주소"
+                          class="form-control change-addr"
+                          required
+                          readonly
+                        />
+                      </div>
+
+                      <div class="col-lg-4">
+                        <input
+                          type="text"
+                          id="jibunAddress"
+                          placeholder="지번주소"
+                          class="form-control change-addr"
+                          readonly
+                        />
+                      </div>
+                    </div>
+                    <div class="row mb-3">
+                      <label
+                        class="col-lg-3 col-form-label"
+                      ></label>
+                      <div class="col-lg-4">
+                        <input
+                          type="text"
+                          id="detailAddress"
+                          placeholder="상세주소"
+                          class="form-control change-addr"
+                          required
+                        />
+                      </div>
+
+                      <div class="col-lg-4">
+                        <input
+                          type="text"
+                          id="extraAddress"
+                          placeholder="참고주소"
+                          class="form-control change-addr"
+                          readonly
+                        />
+                      </div>
                     </div>
 
                     <div class="row mb-3">
@@ -420,23 +493,37 @@
                         인증</button>
                     </div>
 
-                    <div class="row mb-3">
+                    <!-- <div class="row mb-3">
                       <label for="license" class="col-md-4 col-lg-3 col-form-label">자격</label>
                       <div class="col-md-8 col-lg-9">
                         <input type="text" class="form-control change-license" id="license">
                       </div>
+                    </div> -->
+
+                    <div class="register-career-list">
+                    <div class="row mb-3">
                       <label for="career" class="col-md-4 col-lg-3 col-form-label">학력/경력</label>
-                      <div class="col-md-8 col-lg-9">
+                      <!-- <div class="col-md-8 col-lg-8">
                         <input type="text" class="form-control change-career" id="career">
+                        나의 학력/경력 목록
+                      </div> -->
+                      <div class="col-lg-1 btn-list">
+                        <button
+                          type="button"
+                          class="btn btn-outline-primary btn-sm add-career-btn"
+                        >
+                          ＋
+                        </button>
                       </div>
                     </div>
-
+                  </div>
 
                     <div class="text-center">
                       <button type="button" class="btn btn-primary change-btn">저장</button>
                     </div>
                   </form><!-- End Profile Edit Form -->
 
+                </div>
                 </div>
 
                 <div class="tab-pane fade pt-3" id="profile-change-password">
@@ -525,15 +612,48 @@
   <script type='text/babel' src="doctors-profile.js"></script>
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   <script>
-    function addr() {
-      new daum.Postcode({
-        oncomplete: function (data) {
-          // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분입니다.
-          // 예제를 참고하여 다양한 활용법을 확인해 보세요.
-          document.querySelector(".change-addr").value = data.address;
-        }
-      }).open();
-    }
+      // 우편번호 주소 검색 API
+      function execDaumPostcode() {
+        new daum.Postcode({
+          oncomplete: function (data) {
+            // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+            // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
+            // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+            var roadAddr = data.roadAddress; // 도로명 주소 변수
+            var extraRoadAddr = ''; // 참고 항목 변수
+
+            // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+            // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+            if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
+              extraRoadAddr += data.bname;
+            }
+            // 건물명이 있고, 공동주택일 경우 추가한다.
+            if (data.buildingName !== '' && data.apartment === 'Y') {
+              extraRoadAddr +=
+                extraRoadAddr !== ''
+                  ? ', ' + data.buildingName
+                  : data.buildingName;
+            }
+            // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+            if (extraRoadAddr !== '') {
+              extraRoadAddr = ' (' + extraRoadAddr + ')';
+            }
+
+            // 우편번호와 주소 정보를 해당 필드에 넣는다.
+            document.getElementById('postcode').value = data.zonecode;
+            document.getElementById('roadAddress').value = roadAddr;
+            document.getElementById('jibunAddress').value = data.jibunAddress;
+
+            // 참고항목 문자열이 있을 경우 해당 필드에 넣는다.
+            if (roadAddr !== '') {
+              document.getElementById('extraAddress').value = extraRoadAddr;
+            } else {
+              document.getElementById('extraAddress').value = '';
+            }
+          },
+        }).open();
+      }
   </script>
 
 
